# I2S-audio-rp2350-rust

./: Cargo.toml  README.md
rp235x-hal/: README.md
rp235x-hal/src/clocks/: mod.rs
src/: i2s_module.rs  main.rs
